# simple_brick_breaker

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/texture/: game_spritesheet.ron
config/: display.ron
src/: collision.rs  components.rs  game.rs  main.rs
src/systems/: ball.rs  ball_destroyer.rs  mod.rs  paddle.rs  world.rs
