[package]
name = "simple_brick_breaker"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "^0.15.3"
ncollide2d = "^0.21.0"
smallvec = "^1.4.0"
rand = "^0.7.3"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
